--- a/src/main/java/de/tobiasdollhofer/codecast/ui/CodeCastPlayer.form
+++ b/src/main/java/de/tobiasdollhofer/codecast/ui/CodeCastPlayer.form
@@ -3,16 +3,21 @@
   <grid id="27dc6" binding="playerWindowContent" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="16" right="16"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="730" height="679"/>
     </constraints>
-    <properties/>
+    <properties>
+      <autoscrolls value="false"/>
+      <minimumSize width="300" height="211"/>
+    </properties>
     <border type="none"/>
     <children>
       <scrollpane id="5965" binding="playlistPane">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <visible value="true"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="5a63b" class="javax.swing.JList" binding="playlistList">
@@ -30,17 +35,19 @@
           </component>
         </children>
       </scrollpane>
-      <grid id="f0665" binding="playerPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f0665" binding="playerPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <visible value="true"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="eafbe" class="javax.swing.JTextPane" binding="currentTitleLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="2" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="25"/>
               </grid>
             </constraints>
@@ -52,7 +59,7 @@
           <grid id="a0ee" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -74,6 +81,97 @@
                   <value value="35"/>
                 </properties>
               </component>
+            </children>
+          </grid>
+          <grid id="9e740" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="true">
+                <minimum-size width="350" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <visible value="true"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="4c438" class="javax.swing.JButton" binding="playFirst">
+                <constraints/>
+                <properties>
+                  <contentAreaFilled value="true"/>
+                  <iconTextGap value="24"/>
+                  <maximumSize width="30" height="30"/>
+                  <minimumSize width="30" height="30"/>
+                  <preferredSize width="30" height="30"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="2eb37" class="javax.swing.JButton" binding="playPrevious">
+                <constraints/>
+                <properties>
+                  <maximumSize width="30" height="30"/>
+                  <minimumSize width="30" height="30"/>
+                  <preferredSize width="30" height="30"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="41dfb" class="javax.swing.JButton" binding="playPause">
+                <constraints/>
+                <properties>
+                  <maximumSize width="40" height="40"/>
+                  <minimumSize width="40" height="40"/>
+                  <preferredSize width="40" height="40"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="bd408" class="javax.swing.JButton" binding="playNext">
+                <constraints/>
+                <properties>
+                  <maximumSize width="30" height="30"/>
+                  <minimumSize width="30" height="30"/>
+                  <preferredSize width="30" height="30"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="91767" class="javax.swing.JButton" binding="playLast">
+                <constraints/>
+                <properties>
+                  <maximumSize width="30" height="30"/>
+                  <minimumSize width="30" height="30"/>
+                  <preferredSize width="30" height="30"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <grid id="820c1" layout-manager="FlowLayout" hgap="0" vgap="5" flow-align="2">
+                <constraints/>
+                <properties>
+                  <maximumSize width="200" height="40"/>
+                  <minimumSize width="70" height="40"/>
+                  <preferredSize width="160" height="40"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="4c739" class="javax.swing.JLabel" binding="volumeIcon">
+                    <constraints/>
+                    <properties>
+                      <horizontalAlignment value="4"/>
+                      <horizontalTextPosition value="0"/>
+                      <maximumSize width="30" height="30"/>
+                      <minimumSize width="20" height="20"/>
+                      <preferredSize width="30" height="30"/>
+                      <text value=""/>
+                    </properties>
+                  </component>
+                  <component id="a2417" class="javax.swing.JSlider" binding="volumeSlider">
+                    <constraints/>
+                    <properties>
+                      <maximumSize width="100" height="16"/>
+                      <minimumSize width="50" height="20"/>
+                      <preferredSize width="100" height="30"/>
+                      <value value="100"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
         </children>
