--- a/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
+++ b/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
@@ -78,7 +78,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <value value="35"/>
+                  <value value="50"/>
                 </properties>
               </component>
             </children>
@@ -201,6 +201,12 @@
               <preferredSize width="30" height="30"/>
               <text value=""/>
               <toolTipText value="Reload Playlist-File"/>
+            </properties>
+          </component>
+          <component id="3bde8" class="javax.swing.JToggleButton" binding="autoplayButton">
+            <constraints/>
+            <properties>
+              <text value="Autoplay"/>
             </properties>
           </component>
         </children>
