--- a/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
+++ b/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
@@ -69,7 +69,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="0:35/1:40"/>
+                  <text value="0:00/0:00"/>
                   <toolTipText value="Current Time"/>
                 </properties>
               </component>
@@ -206,7 +206,7 @@
           <component id="3bde8" class="javax.swing.JToggleButton" binding="autoplayButton">
             <constraints/>
             <properties>
-              <text value="Autoplay"/>
+              <text value="Autoplay OFF"/>
             </properties>
           </component>
         </children>
