--- a/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
+++ b/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
@@ -202,6 +202,12 @@
               <text value="Autoplay OFF"/>
             </properties>
           </component>
+          <component id="f0c88" class="javax.swing.JToggleButton" binding="jumpToCode">
+            <constraints/>
+            <properties>
+              <text value="Jump-To-Code OFF"/>
+            </properties>
+          </component>
         </children>
       </toolbar>
     </children>
