--- a/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
+++ b/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
@@ -11,7 +11,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <scrollpane id="5965" binding="playlistPane">
+      <scrollpane id="5965" binding="playlistPane" custom-create="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -19,14 +19,7 @@
           <visible value="true"/>
         </properties>
         <border type="none"/>
-        <children>
-          <component id="5a63b" class="javax.swing.JList" binding="playlistList">
-            <constraints/>
-            <properties>
-              <model/>
-            </properties>
-          </component>
-        </children>
+        <children/>
       </scrollpane>
       <grid id="f0665" binding="playerPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
