--- a/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
+++ b/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="de.tobiasdollhofer.codecast.player.ui.PlayerUI">
-  <grid id="27dc6" binding="playerWindowContent" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="playerWindowContent" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="16" right="16"/>
     <constraints>
       <xy x="20" y="20" width="730" height="679"/>
@@ -21,10 +21,10 @@
         <border type="none"/>
         <children/>
       </scrollpane>
-      <grid id="f0665" binding="playerPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f0665" binding="playerPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <visible value="true"/>
@@ -38,8 +38,10 @@
               </grid>
             </constraints>
             <properties>
-              <text value="No Comment currently playing"/>
-              <toolTipText value="Currently played Comment"/>
+              <editable value="false"/>
+              <font name="Segoe UI" size="18" style="0"/>
+              <text resource-bundle="ui_text" key="no_comment_available"/>
+              <toolTipText resource-bundle="ui_text" key="tooltip_currentComment"/>
             </properties>
           </component>
           <grid id="a0ee" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -59,8 +61,9 @@
                 <properties>
                   <editable value="false"/>
                   <enabled value="true"/>
-                  <text value="0:00/0:00"/>
-                  <toolTipText value="Current Time"/>
+                  <font name="Segoe UI" size="14" style="0"/>
+                  <text resource-bundle="ui_text" key="playback_zero"/>
+                  <toolTipText resource-bundle="ui_text" key="tooltip_currentTime"/>
                 </properties>
               </component>
               <component id="8949a" class="javax.swing.JProgressBar" binding="playerProgressBar">
@@ -97,7 +100,7 @@
                   <minimumSize width="30" height="30"/>
                   <preferredSize width="30" height="30"/>
                   <text value=""/>
-                  <toolTipText value="Play first comment"/>
+                  <toolTipText resource-bundle="ui_text" key="tooltip_playFirst"/>
                 </properties>
               </component>
               <component id="2eb37" class="javax.swing.JButton" binding="playPrevious">
@@ -107,7 +110,7 @@
                   <minimumSize width="30" height="30"/>
                   <preferredSize width="30" height="30"/>
                   <text value=""/>
-                  <toolTipText value="Play previous comment"/>
+                  <toolTipText resource-bundle="ui_text" key="tooltip_playPrevious"/>
                 </properties>
               </component>
               <component id="41dfb" class="javax.swing.JButton" binding="playPause">
@@ -117,7 +120,7 @@
                   <minimumSize width="40" height="40"/>
                   <preferredSize width="40" height="40"/>
                   <text value=""/>
-                  <toolTipText value="Play / Pause"/>
+                  <toolTipText resource-bundle="ui_text" key="tooltip_playPause"/>
                 </properties>
               </component>
               <component id="bd408" class="javax.swing.JButton" binding="playNext">
@@ -127,7 +130,7 @@
                   <minimumSize width="30" height="30"/>
                   <preferredSize width="30" height="30"/>
                   <text value=""/>
-                  <toolTipText value="Play next Comment"/>
+                  <toolTipText resource-bundle="ui_text" key="tooltip_playNext"/>
                 </properties>
               </component>
               <component id="91767" class="javax.swing.JButton" binding="playLast">
@@ -137,7 +140,7 @@
                   <minimumSize width="30" height="30"/>
                   <preferredSize width="30" height="30"/>
                   <text value=""/>
-                  <toolTipText value="Play last comment"/>
+                  <toolTipText resource-bundle="ui_text" key="tooltip_playLast"/>
                 </properties>
               </component>
               <grid id="820c1" layout-manager="FlowLayout" hgap="0" vgap="5" flow-align="2">
@@ -183,14 +186,14 @@
             </constraints>
             <properties>
               <text value=""/>
-              <toolTipText value="Show Code for this Explanation"/>
+              <toolTipText resource-bundle="ui_text" key="tooltip_showCodeButton"/>
             </properties>
           </component>
         </children>
       </grid>
       <toolbar id="97b4e" binding="toolbar">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <borderPainted value="true"/>
@@ -212,7 +215,7 @@
               <minimumSize width="40" height="40"/>
               <preferredSize width="40" height="40"/>
               <text value=""/>
-              <toolTipText value="Reload Playlist"/>
+              <toolTipText resource-bundle="ui_text" key="tooltip_reloadButton"/>
             </properties>
           </component>
           <component id="3bde8" class="javax.swing.JToggleButton" binding="autoplayButton">
@@ -222,7 +225,7 @@
               <minimumSize width="40" height="40"/>
               <preferredSize width="40" height="40"/>
               <text value=""/>
-              <toolTipText value="Enable / Disable Autoplay"/>
+              <toolTipText resource-bundle="ui_text" key="tooltip_autoplayButton"/>
             </properties>
           </component>
           <component id="f0c88" class="javax.swing.JToggleButton" binding="jumpToCode">
@@ -232,11 +235,21 @@
               <minimumSize width="40" height="40"/>
               <preferredSize width="40" height="40"/>
               <text value=""/>
-              <toolTipText value="Enable / Disable Automatic Jump to Code"/>
+              <toolTipText resource-bundle="ui_text" key="tooltip_jumpToCodeButton"/>
             </properties>
           </component>
         </children>
       </toolbar>
+      <component id="a15d9" class="javax.swing.JTextPane" binding="explanation">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+          <font name="Segoe UI" size="16" style="0"/>
+          <text resource-bundle="ui_text" key="codecast_description"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
