added possibility to pause playback with gutter icon

--- a/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
+++ b/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
@@ -207,6 +207,7 @@
           <component id="641d4" class="javax.swing.JButton" binding="reloadButton">
             <constraints/>
             <properties>
+              <enabled value="true"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="11"/>
               <icon value="actions/refresh.png"/>
