optimized error handling for downloads

--- a/src/main/java/de/tobiasdollhofer/codecast/player/ui/HelpTab.form
+++ b/src/main/java/de/tobiasdollhofer/codecast/player/ui/HelpTab.form
@@ -76,6 +76,7 @@
                     <properties>
                       <editable value="false"/>
                       <font name="Segoe UI" size="14" style="0"/>
+                      <foreground color="-8618884"/>
                       <text resource-bundle="ui_text" key="help_reload"/>
                     </properties>
                   </component>
